Z-index fix for friend list

--- a/client/css/common.scss
+++ b/client/css/common.scss
@@ -217,7 +217,7 @@ body {
 .container-friend {
   width:280px;
   max-height:100%;
-  z-index:1;
+  z-index:1000;
 }
 
 .invite-window {
@@ -337,7 +337,7 @@ body {
     clear: both;
     font-weight: 400;
     line-height: 1.5;
-    color: #fff;
+    color: #373a3c;
     text-align: inherit;
     white-space: nowrap;
     background: 0 0;
